--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -202,6 +202,7 @@
     - name: Flush bottom modifier
       markup: |
         <main class="content content__1-3" id="main" role="main">
+            <div class="content_bar"></div>
             <div class="wrapper content_wrapper">
                 <aside class="content_sidebar content__flush-bottom">
                     Side with no bottom padding...
@@ -225,11 +226,60 @@
             </div>
         </footer>
       codenotes:
-        - .content_main__flush-bottom
+        - .content__flush-bottom
       notes:
-        - "Add a class of .content_main__flush-bottom to .content_main or
-           .content_sidebar__flush-bottom to .content_sidebar to remove 
-           bottom padding."
+        - "Add a class of .content__flush-bottom to .content_main or
+           content_sidebar to remove bottom padding."
+    - name: Flush top modifier (only on small screens)
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="content_bar"></div>
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar content__flush-top-on-small">
+                    Side with no top padding on small screens...
+                </aside>
+                <section class="content_main">
+                    Main content
+                </section>
+            </div>
+        </main>
+        <footer class="footer" role="contentinfo">
+            <div class="wrapper">
+                Footer
+            </div>
+        </footer>
+      codenotes:
+        - .content__flush-top-on-small
+      notes:
+        - "Add a class of .content__flush-top-on-small to .content_main or
+           .content_sidebar to remove top padding on small screens only.
+           'Small' screens in this case refers to the breakpoint where
+           .content_main and .content_sidebar single column layout."
+    - name: Flush all modifier (only on small screens)
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="content_bar"></div>
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar content__flush-all-on-small">
+                    Side with no padding or border-based gutters on small screens...
+                </aside>
+                <section class="content_main">
+                    Main content
+                </section>
+            </div>
+        </main>
+        <footer class="footer" role="contentinfo">
+            <div class="wrapper">
+                Footer
+            </div>
+        </footer>
+      codenotes:
+        - .content__flush-all-on-small
+      notes:
+        - "Add a class of .content__flush-all-on-small to .content_main or
+           .content_sidebar to remove all padding and border-based gutters on
+           small screens only. 'Small' screens in this case refers to the
+           breakpoint where .content_main and .content_sidebar single column layout."
   tags:
     - cfgov-layout
 */
@@ -250,11 +300,6 @@
                  0;
     });
 }
-
-.content__flush-bottom {
-    padding-bottom: 0;
-}
-
 
 // Set up standard multi-column content area layouts
 .u-respond-to-min(801px, {
@@ -306,6 +351,23 @@
         }
     }
 });
+
+.content__flush-bottom {
+    padding-bottom: 0;
+}
+
+.content__flush-top-on-small {
+    .u-respond-to-max(800px, {
+        padding-top: 0;
+    });
+}
+
+.content__flush-all-on-small {
+    .u-respond-to-max(800px, {
+        padding: 0;
+        border-width: 0;
+    });
+}
 
 
 /* topdoc
@@ -535,7 +597,7 @@
                 <aside class="content_sidebar">
                     Section navigation
                 </aside>
-                <section class="content_main content_main__flush-bottom">
+                <section class="content_main content__flush-bottom">
                     Main content...
                     <div class="content_block content_block__flush-sides content_block__bg">
                         Content block with a background and flush sides
