--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5541,6 +5541,7 @@ img {
     - name: Flush bottom modifier
       markup: |
         <main class="content content__1-3" id="main" role="main">
+            <div class="content_bar"></div>
             <div class="wrapper content_wrapper">
                 <aside class="content_sidebar content__flush-bottom">
                     Side with no bottom padding...
@@ -5564,11 +5565,60 @@ img {
             </div>
         </footer>
       codenotes:
-        - .content_main__flush-bottom
+        - .content__flush-bottom
       notes:
-        - "Add a class of .content_main__flush-bottom to .content_main or
-           .content_sidebar__flush-bottom to .content_sidebar to remove 
-           bottom padding."
+        - "Add a class of .content__flush-bottom to .content_main or
+           content_sidebar to remove bottom padding."
+    - name: Flush top modifier (only on small screens)
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="content_bar"></div>
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar content__flush-top-on-small">
+                    Side with no top padding on small screens...
+                </aside>
+                <section class="content_main">
+                    Main content
+                </section>
+            </div>
+        </main>
+        <footer class="footer" role="contentinfo">
+            <div class="wrapper">
+                Footer
+            </div>
+        </footer>
+      codenotes:
+        - .content__flush-top-on-small
+      notes:
+        - "Add a class of .content__flush-top-on-small to .content_main or
+           .content_sidebar to remove top padding on small screens only.
+           'Small' screens in this case refers to the breakpoint where
+           .content_main and .content_sidebar single column layout."
+    - name: Flush all modifier (only on small screens)
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="content_bar"></div>
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar content__flush-all-on-small">
+                    Side with no padding or border-based gutters on small screens...
+                </aside>
+                <section class="content_main">
+                    Main content
+                </section>
+            </div>
+        </main>
+        <footer class="footer" role="contentinfo">
+            <div class="wrapper">
+                Footer
+            </div>
+        </footer>
+      codenotes:
+        - .content__flush-all-on-small
+      notes:
+        - "Add a class of .content__flush-all-on-small to .content_main or
+           .content_sidebar to remove all padding and border-based gutters on
+           small screens only. 'Small' screens in this case refers to the
+           breakpoint where .content_main and .content_sidebar single column layout."
   tags:
     - cfgov-layout
 */
@@ -5607,9 +5657,6 @@ img {
   .content_sidebar {
     padding: 3.75em 0;
   }
-}
-.content__flush-bottom {
-  padding-bottom: 0;
 }
 @media only all and (min-width: 50.0625em) {
   .content__1-3 .content_sidebar {
@@ -5731,6 +5778,20 @@ img {
   }
   .lt-ie8 .content__2-1 .content_main__narrow {
     padding-right: 0;
+  }
+}
+.content__flush-bottom {
+  padding-bottom: 0;
+}
+@media only all and (max-width: 50em) {
+  .content__flush-top-on-small {
+    padding-top: 0;
+  }
+}
+@media only all and (max-width: 50em) {
+  .content__flush-all-on-small {
+    padding: 0;
+    border-width: 0;
   }
 }
 /* topdoc
@@ -5930,7 +5991,7 @@ img {
                 <aside class="content_sidebar">
                     Section navigation
                 </aside>
-                <section class="content_main content_main__flush-bottom">
+                <section class="content_main content__flush-bottom">
                     Main content...
                     <div class="content_block content_block__flush-sides content_block__bg">
                         Content block with a background and flush sides
@@ -6355,7 +6416,7 @@ img {
 @media only all and (max-width: 50em) {
   .nav-secondary_link {
     display: block;
-    padding: 0.9375em;
+    padding: 0.9375em 1.875em;
     border-bottom-style: solid;
     border-width: 0;
     border-bottom-width: 1px;
@@ -6390,6 +6451,12 @@ img {
   .nav-secondary_link.active {
     border-color: #e3e4e5;
     color: #43484e;
+  }
+}
+@media only all and (max-width: 37.5em) {
+  .nav-secondary_link {
+    padding-left: 0.9375em;
+    padding-right: 0.9375em;
   }
 }
 @media only all and (min-width: 50.0625em) {
