--- a/_layouts/email-subscribe-form.html
+++ b/_layouts/email-subscribe-form.html
@@ -1,11 +1,11 @@
 
-<form id="email-subscribe-form">
+<form class="reveal-on-focus" id="email-subscribe-form">
 
     <div class="form-group">
-        <input type="text" placeholder="Your email">
+        <input class="reveal-on-focus_trigger" type="text" placeholder="Your email">
     </div>
 
-    <div class="form-group">
+    <div class="form-group reveal-on-focus_content u-clearfix">
     {% for category in query.possible_values_for('category')|sort(attribute='term') -%}
         <label class="form-group_item form-label">
             <input class="custom-input"
