Testing out using the email input type.

--- a/_layouts/email-subscribe-form.html
+++ b/_layouts/email-subscribe-form.html
@@ -2,7 +2,7 @@
 <form class="reveal-on-focus" id="email-subscribe-form">
 
     <div class="form-group">
-        <input class="reveal-on-focus_trigger" type="text" placeholder="Your email">
+        <input class="reveal-on-focus_trigger" type="email" placeholder="Your email">
     </div>
 
     <div class="form-group reveal-on-focus_content u-clearfix">
