Updates form group pattern.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7830,8 +7830,8 @@ a.category-slug.active {
 .form-group + .form-group {
   margin-top: 1.875em;
 }
-.form-group_item {
-  margin-bottom: 0.9375em;
+.form-group_item + .form-group_item {
+  margin-top: 0.9375em;
 }
 /* topdoc
   name: Form actions
