--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8711,8 +8711,8 @@ a.category-slug.active {
   margin-top: 1.875em;
 }
 
-.form-group_item {
-  margin-bottom: 0.9375em;
+.form-group_item + .form-group_item {
+  margin-top: 0.9375em;
 }
 
 /* topdoc
