--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -707,8 +707,8 @@ select[multiple].success {
     margin-top: unit(30px / @base-font-size-px, em);
 }
 
-.form-group_item {
-    margin-bottom: unit(15px / @base-font-size-px, em);
+.form-group_item + .form-group_item {
+    margin-top: unit(15px / @base-font-size-px, em);
 }
 
 
