--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -38,6 +38,139 @@
 
 
 /* topdoc
+  name: Content layouts
+  family: cfgov-layout
+  patterns:
+    - name: Standard content columns
+      markup: |
+        <div class="content-l">
+            <div class="content-l_col content-l_col-1">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Full-width column (spans 12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-2-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;">
+                    Two thirds-width column (spans 8/12 columns)
+                </div>
+            </div>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .content-l
+            .content-l_col.content-l_col-(RATIO)
+        - .content-l_col.content-l_col-1
+        - .content-l_col.content-l_col-1-2
+        - .content-l_col.content-l_col-1-3
+        - .content-l_col.content-l_col-2-3
+      notes:
+        - "These layout classes have breakpoints that are specific for use
+           within .content_main."
+        - "Since .content-l_col's are nested within .content_main extra
+           margins will occur. The .content-l container uses the
+           grid_nested-col-group mixin to counter this."
+        - "Note that the divs with inline styles are for demonstration purposes
+           only and should not be used in production."
+  tags:
+    - cfgov-layout
+*/
+
+.content-l {
+    .u-respond-to-min(600px, {
+        .grid_nested-col-group();
+    });
+}
+
+.content-l_col {
+    & + & {
+        margin-top: unit(@grid_gutter-width / @base-font-size-px, em);
+    }
+    .u-respond-to-min(600px, {
+        & + & {
+            margin-top: 0;
+        }
+    });
+}
+
+.content-l_col-1 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
+}
+
+.content-l_col-1-2 {
+    .u-respond-to-min(600px, {
+        .grid_column(6);
+    });
+}
+
+.content-l_col-1-3 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
+    .u-respond-to-min(768px, {
+        .grid_column(4);
+    });
+}
+
+.content-l_col-2-3 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
+    .u-respond-to-min(768px, {
+        .grid_column(8);
+    });
+}
+
+
+/* topdoc
   name: Content bar
   family: cfgov-layout
   patterns:
@@ -371,7 +504,155 @@
 
 
 /* topdoc
-  name: Sidebar
+  name: Content block
+  family: cfgov-layout
+  notes:
+    - ".content_block elements are built to be used within .content_main."
+  patterns:
+    - name: Standard content block example
+      markup: |
+        Main content...
+        <div class="content_block">
+            Content block
+        </div>
+        <div class="content_block">
+            Content block
+        </div>
+        <div class="content_block">
+            Content block
+        </div>
+      codenotes:
+        - .content_block
+      notes:
+        - "Useful for when you need some consistent margin between content
+           blocks within .content_main."
+    - name: Flush-top modifier
+      markup: |
+        Main content...
+        <div class="content_block content_block__flush-top">
+            Content block with no top margin.
+        </div>
+        <div class="content_block">
+            Content block
+        </div>
+      codenotes:
+        - .content_block.content_block__flush-top
+      notes:
+        - "Removes the top margin from .content_block."
+    - name: Flush-bottom modifier
+      markup: |
+        Main content...
+        <div class="content_block content_block__flush-bottom">
+            Content block with no bottom margin.
+        </div>
+        <div class="content_block content_block__flush-top">
+            Content block with no top margin.
+        </div>
+      codenotes:
+        - .content_block.content_block__flush-bottom
+      notes:
+        - "Removes the bottom margin from .content_block."
+    - name: Flush-sides modifier
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar">
+                    Section navigation
+                </aside>
+                <section class="content_main">
+                    Main content...
+                    <aside class="content_block content_block__flush-sides">
+                        Content block with no side margins.
+                    </aside>
+                </section>
+            </div>
+        </main>
+      codenotes:
+        - .content_block.content_block__flush-sides
+      notes:
+        - "Removes the side margin from .content_block."
+    - name: Background modifier
+      markup: |
+        Main content...
+        <div class="content_block content_block__bg">
+            Content block with a background
+        </div>
+      codenotes:
+        - .content_block.content_block__bg
+      notes:
+        - "Adds a background color and padding to .content_block."
+    - name: Background and flush-sides modifier combo example
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar">
+                    Section navigation
+                </aside>
+                <section class="content_main content__flush-bottom">
+                    Main content...
+                    <div class="content_block content_block__flush-sides content_block__bg">
+                        Content block with a background and flush sides
+                    </div>
+                </section>
+            </div>
+        </main>
+      codenotes:
+        - .content_block.content_block__sides.content_block__bg
+      notes:
+        - "This is an example of combining modifiers to get a flush padded bg
+           with a .content_block."
+  tags:
+    - cfgov-layout
+*/
+
+.content_block {
+    margin-top: unit((@grid_gutter-width * 2) / @base-font-size-px, em);
+    margin-bottom: unit((@grid_gutter-width * 2) / @base-font-size-px, em);
+
+    &__flush-top {
+        margin-top: 0 !important;
+    }
+
+    &__flush-bottom {
+        margin-bottom: 0 !important;
+    }
+
+    &__flush-sides {
+        margin-right: -(@grid_gutter-width / 2);
+        margin-left: -(@grid_gutter-width / 2);
+        .u-respond-to-min(600px, {
+            margin-right: -@grid_gutter-width;
+            margin-left: -@grid_gutter-width;
+        });
+    }
+
+    &__bg {
+        padding: unit(@grid_gutter-width / @base-font-size-px, em)
+                 unit((@grid_gutter-width / 2) / @base-font-size-px, em);
+        background: @gray-10;
+        .u-respond-to-min(600px, {
+            padding: unit(45 / @base-font-size-px, em)
+                     unit(@grid_gutter-width / @base-font-size-px, em);
+        });
+    }
+}
+
+.content_block__sub {
+    margin-top: unit(30px / @base-font-size-px, em);
+    margin-bottom: unit(30px / @base-font-size-px, em);
+}
+
+.content-l_col.content_block,
+.content-l_col.content_block__sub {
+    .u-respond-to-min(600px, {
+        margin-top: 0;
+    });
+}
+
+
+
+/* topdoc
+  name: Sidebar items
   family: cfgov-layout
   patterns:
     - name: Sidebar item spacing
@@ -509,273 +790,6 @@
     padding: 1.5em 0;
     border-top: 3px solid @green;
     background: @gray-10;
-}
-
-
-/* topdoc
-  name: Content block
-  family: cfgov-layout
-  notes:
-    - ".content_block elements are built to be used within .content_main."
-  patterns:
-    - name: Standard content block example
-      markup: |
-        Main content...
-        <div class="content_block">
-            Content block
-        </div>
-        <div class="content_block">
-            Content block
-        </div>
-        <div class="content_block">
-            Content block
-        </div>
-      codenotes:
-        - .content_block
-      notes:
-        - "Useful for when you need some consistent margin between content
-           blocks within .content_main."
-    - name: Flush-top modifier
-      markup: |
-        Main content...
-        <div class="content_block content_block__flush-top">
-            Content block with no top margin.
-        </div>
-        <div class="content_block">
-            Content block
-        </div>
-      codenotes:
-        - .content_block.content_block__flush-top
-      notes:
-        - "Removes the top margin from .content_block."
-    - name: Flush-bottom modifier
-      markup: |
-        Main content...
-        <div class="content_block content_block__flush-bottom">
-            Content block with no bottom margin.
-        </div>
-        <div class="content_block content_block__flush-top">
-            Content block with no top margin.
-        </div>
-      codenotes:
-        - .content_block.content_block__flush-bottom
-      notes:
-        - "Removes the bottom margin from .content_block."
-    - name: Flush-sides modifier
-      markup: |
-        <main class="content content__1-3" id="main" role="main">
-            <div class="wrapper content_wrapper">
-                <aside class="content_sidebar">
-                    Section navigation
-                </aside>
-                <section class="content_main">
-                    Main content...
-                    <aside class="content_block content_block__flush-sides">
-                        Content block with no side margins.
-                    </aside>
-                </section>
-            </div>
-        </main>
-      codenotes:
-        - .content_block.content_block__flush-sides
-      notes:
-        - "Removes the side margin from .content_block."
-    - name: Background modifier
-      markup: |
-        Main content...
-        <div class="content_block content_block__bg">
-            Content block with a background
-        </div>
-      codenotes:
-        - .content_block.content_block__bg
-      notes:
-        - "Adds a background color and padding to .content_block."
-    - name: Background and flush-sides modifier combo example
-      markup: |
-        <main class="content content__1-3" id="main" role="main">
-            <div class="wrapper content_wrapper">
-                <aside class="content_sidebar">
-                    Section navigation
-                </aside>
-                <section class="content_main content__flush-bottom">
-                    Main content...
-                    <div class="content_block content_block__flush-sides content_block__bg">
-                        Content block with a background and flush sides
-                    </div>
-                </section>
-            </div>
-        </main>
-      codenotes:
-        - .content_block.content_block__sides.content_block__bg
-      notes:
-        - "This is an example of combining modifiers to get a flush padded bg
-           with a .content_block."
-  tags:
-    - cfgov-layout
-*/
-
-.content_block {
-    margin: unit((@grid_gutter-width * 2) / @base-font-size-px, em) 0;
-
-    &__flush-top {
-        margin-top: 0 !important;
-    }
-
-    &__flush-bottom {
-        margin-bottom: 0 !important;
-    }
-
-    &__flush-sides {
-        margin-right: -(@grid_gutter-width / 2);
-        margin-left: -(@grid_gutter-width / 2);
-        .u-respond-to-min(600px, {
-            margin-right: -@grid_gutter-width;
-            margin-left: -@grid_gutter-width;
-        });
-    }
-
-    &__bg {
-        padding: unit(@grid_gutter-width / @base-font-size-px, em)
-                 unit((@grid_gutter-width / 2) / @base-font-size-px, em);
-        background: @gray-10;
-        .u-respond-to-min(600px, {
-            padding: unit(45 / @base-font-size-px, em)
-                     unit(@grid_gutter-width / @base-font-size-px, em);
-        });
-    }
-}
-
-
-/* topdoc
-  name: Content layouts
-  family: cfgov-layout
-  patterns:
-    - name: Standard content columns
-      markup: |
-        <div class="content-l">
-            <div class="content-l_col content-l_col-1">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;
-                            margin-bottom: 4px;">
-                    Full-width column (spans 12 columns)
-                </div>
-            </div>
-            <div class="content-l_col content-l_col-1-2">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;
-                            margin-bottom: 4px;">
-                    Half-width column (spans 6/12 columns)
-                </div>
-            </div>
-            <div class="content-l_col content-l_col-1-2">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;
-                            margin-bottom: 4px;">
-                    Half-width column (spans 6/12 columns)
-                </div>
-            </div>
-            <div class="content-l_col content-l_col-1-3">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;
-                            margin-bottom: 4px;">
-                    Third-width column (spans 4/12 columns)
-                </div>
-            </div>
-            <div class="content-l_col content-l_col-1-3">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;
-                            margin-bottom: 4px;">
-                    Third-width column (spans 4/12 columns)
-                </div>
-            </div>
-            <div class="content-l_col content-l_col-1-3">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;
-                            margin-bottom: 4px;">
-                    Third-width column (spans 4/12 columns)
-                </div>
-            </div>
-            <div class="content-l_col content-l_col-2-3">
-                <div style="background: #F1F2F2;
-                            text-align: center;
-                            padding: 8px;">
-                    Two thirds-width column (spans 8/12 columns)
-                </div>
-            </div>
-        </div>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .content-l
-            .content-l_col.content-l_col-(RATIO)
-        - .content-l_col.content-l_col-1
-        - .content-l_col.content-l_col-1-2
-        - .content-l_col.content-l_col-1-3
-        - .content-l_col.content-l_col-2-3
-      notes:
-        - "These layout classes have breakpoints that are specific for use
-           within .content_main."
-        - "Since .content-l_col's are nested within .content_main extra
-           margins will occur. The .content-l container uses the
-           grid_nested-col-group mixin to counter this."
-        - "Note that the divs with inline styles are for demonstration purposes
-           only and should not be used in production."
-  tags:
-    - cfgov-layout
-*/
-
-.content-l {
-    .u-respond-to-min(600px, {
-        .grid_nested-col-group();
-    });
-}
-
-.content-l_col {
-    & + & {
-        margin-top: unit((@grid_gutter-width * 2) / @base-font-size-px, em);
-    }
-    .u-respond-to-min(600px, {
-        & + & {
-            margin-top: 0;
-        }
-    });
-}
-
-.content-l_col-1 {
-    .u-respond-to-min(600px, {
-        .grid_column(12);
-    });
-}
-
-.content-l_col-1-2 {
-    .u-respond-to-min(600px, {
-        .grid_column(6);
-    });
-}
-
-.content-l_col-1-3 {
-    .u-respond-to-min(600px, {
-        .grid_column(12);
-    });
-    .u-respond-to-min(768px, {
-        .grid_column(4);
-    });
-}
-
-.content-l_col-2-3 {
-    .u-respond-to-min(600px, {
-        .grid_column(12);
-    });
-    .u-respond-to-min(768px, {
-        .grid_column(8);
-    });
 }
 
 
