--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -115,7 +115,7 @@
 
     <div class="demo-banner">
         cfgov-refresh demo: <b>{% block demo_title %}MISSING DEMO TITLE{% endblock demo_title %}</b>
-        <a class="demo-banner_back-link" href="/index.html">
+        <a class="demo-banner_back-link" href="/">
             <span class="cf-icon cf-icon-left"></span> Back to demo home
         </a>
     </div>
