--- a/_layouts/posts-paginated.html
+++ b/_layouts/posts-paginated.html
@@ -3,7 +3,7 @@
 
 {% for post in posts %}
 
-    {% if path == '/newsroom' and post.custom_fields.display_in_newsroom %}
+    {% if path == '/newsroom/' and post.custom_fields.display_in_newsroom %}
         {% set permalink = '/blog/' + post.slug + '/' %}
     {% else %}
         {% set permalink = post.permalink %}
