--- a/_layouts/comments.html
+++ b/_layouts/comments.html
@@ -1,6 +1,8 @@
 
 <section class="comments">
 
+    <h1 class="u-visually-hidden">Comments</h1>
+
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
