--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6170,6 +6170,78 @@ img {
 
 /* ==========================================================================
    cfgov-refresh
+   capital framework enhancements
+   ========================================================================== */
+
+/* topdoc
+  name: cf-grid column dividers
+  family: cfgov-cf-enhancements
+  notes:
+    - "cf-grid columns use left and right borders for fixed margins which means
+       it's not possible to set visual left and right borders directly on them.
+       Instead we can use the :before pseudo element and position it absolutely.
+       The added benefit of doing it this way is that the border spans the
+       entire height of the next parent using `position: relative;`. This means
+       that the border will always match the height of the tallest column in the
+       row."
+  patterns:
+    - name: Classes
+      codenotes:
+        - .grid_column__top-divider
+        - .grid_column__left-divider
+    - name: Usage
+      codenotes:
+        - |
+          .my-column-1-2 {
+
+              // Creates a column that spans 6 out of 12 columns.
+              .grid_column(6, 12);
+
+              // Add a top divider only at screen 599px and smaller.
+              .u-respond-to-max(599px {
+                  .grid_column__top-divider();
+              });
+
+              // Add a left divider only at screen 600px and larger.
+              .u-respond-to-min(600px, {
+                  .grid_column__left-divider();
+              });
+
+          }
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.grid_column__top-divider:before {
+  content: "";
+  display: block;
+  height: 1px;
+  margin-bottom: 1.875em;
+  background-color: #babbbd;
+}
+
+.grid_column__left-divider {
+  padding-left: 30px;
+}
+
+.grid_column__left-divider:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  display: block;
+  background-color: #babbbd;
+  margin-left: -45px;
+}
+
+/* topdoc
+    name: EOF
+    eof: true
+*/
+
+/* ==========================================================================
+   cfgov-refresh
    layout
    ========================================================================== */
 
@@ -6292,6 +6364,10 @@ img {
 */
 
 .content-l {
+  position: relative;
+}
+
+.content-l {
   display: block;
   position: relative;
   margin-left: -15px;
@@ -6302,7 +6378,11 @@ img {
   margin-top: 1.875em;
 }
 
-.content-l_col + .content-l_col {
+.content-l_col.content-l_col-1-2 + .content-l_col.content-l_col-1-2 {
+  margin-top: 0;
+}
+
+.content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
   margin-top: 0;
 }
 
@@ -6445,6 +6525,84 @@ img {
 }
 
 /* topdoc
+  name: Content layout column dividers
+  family: cfgov-layout
+  notes:
+    - "Adds dividers between specified .content-l_col-X-X classes."
+    - "Layout dividers work in conjunction with .content-l_col-X-X elements and
+       have specific needs depending on which column element variant they are
+       attached to. For example .content-l_col-1-2 has different divider needs
+       than .content-l_col-1-3 because they break to single columns at different
+       breakpoints."
+    - "Dividers use absolute positioning relative to the .content-l element and
+       depends on .content-l using `position: relative;`. This allows vertical
+       dividers to span the height of the tallest column. Just be aware that if
+       you have more than one row of columns, and each row has columns of
+       different widths, the borders will cause unwanted overlapping since they
+       will span the height of the entire .content-l element."
+  patterns:
+    - name: .content-l_col__before-divider (modifier)
+      markup: |
+        <div class="content-l">
+            <div class="content-l_col content-l_col-1-2">
+                Half-width column (spans 6/12 columns)
+            </div>
+            <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                Half-width column (spans 6/12 columns)
+            </div>
+        </div>
+        <br>
+        <!-- Starting a new .content-l so that the dividers from
+             .content-l_col.content-l_col-1-2.content-l_col__before-divider
+             won't overlap the .content-l_col-1-3 columns. -->
+        <div class="content-l">
+            <div class="content-l_col content-l_col-1-3">
+                Third-width column (spans 4/12 columns)
+            </div>
+            <div class="content-l_col content-l_col-1-3 content-l_col__before-divider">
+                Third-width column (spans 4/12 columns)
+            </div>
+            <div class="content-l_col content-l_col-1-3 content-l_col__before-divider">
+                Third-width column (spans 4/12 columns)
+            </div>
+        </div>
+      codenotes:
+        - .content-l_col__before-divider
+  tags:
+    - cfgov-layout
+*/
+
+.content-l_col__before-divider.content-l_col-1-2 {
+  padding-left: 30px;
+}
+
+.content-l_col__before-divider.content-l_col-1-2:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  display: block;
+  background-color: #babbbd;
+  margin-left: -45px;
+}
+
+.content-l_col__before-divider.content-l_col-1-3 {
+  padding-left: 30px;
+}
+
+.content-l_col__before-divider.content-l_col-1-3:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  display: block;
+  background-color: #babbbd;
+  margin-left: -45px;
+}
+
+/* topdoc
   name: Content bar
   family: cfgov-layout
   patterns:
@@ -6463,6 +6621,22 @@ img {
 .content_bar {
   height: 10px;
   background: #2cb34a;
+}
+
+/* topdoc
+  name: Content line
+  family: cfgov-layout
+  patterns:
+    - name: "A 1 pixel edge to edge bar that can divide content."
+      markup: |
+        <div class="content_line"></div>
+  tags:
+    - cfgov-layout
+*/
+
+.content_line {
+  height: 1px;
+  background: #babbbd;
 }
 
 /* topdoc
@@ -6690,11 +6864,13 @@ img {
     - cfgov-layout
 */
 
+.content_intro,
 .content_main,
 .content_sidebar {
   padding: 1.875em 0.9375em;
 }
 
+.content_intro,
 .content_main,
 .content_sidebar {
   display: inline-block;
@@ -6709,11 +6885,13 @@ img {
   padding: 3.75em 0.9375em;
 }
 
+.ie .content_intro,
 .ie .content_main,
 .ie .content_sidebar {
   margin-right: -0.26em;
 }
 
+.lt-ie8 .content_intro,
 .lt-ie8 .content_main,
 .lt-ie8 .content_sidebar {
   display: inline;
@@ -6722,9 +6900,33 @@ img {
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
+.content_intro,
 .content_main,
 .content_sidebar {
   padding: 3.75em 0;
+}
+
+.content_intro {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content_intro {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content_intro {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_sidebar {
