--- a/static/css/main.less
+++ b/static/css/main.less
@@ -96,6 +96,7 @@ img {
    ========================================================================== */
 
 @import (less) "utilities.less";
+@import (less) "cf-enhancements.less";
 @import (less) "layout.less";
 @import (less) "nav-secondary.less";
 @import (less) "media-object.less";
