--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5349,6 +5349,24 @@ img {
    capital framework enhancements
    ========================================================================== */
 /* topdoc
+  name: Expandables
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: Header right float on medium modifier
+      codenotes:
+        - .expandable_header-right__float-on-medium
+  tags:
+    - cfgov-cf-enhancements
+*/
+.expandable_header-right__float-on-medium {
+  float: none;
+}
+@media only all and (min-width: 37.5em) {
+  .expandable_header-right__float-on-medium {
+    float: right;
+  }
+}
+/* topdoc
   name: cf-grid column dividers
   family: cfgov-cf-enhancements
   notes:
@@ -7433,24 +7451,6 @@ a.category-slug.active {
    cfgov-refresh
    misc
    ========================================================================== */
-/* topdoc
-  name: Expandables
-  family: cfgov-misc
-  patterns:
-    - name: Header right float on medium modifier
-      codenotes:
-        - .expandable_header-right__float-on-medium
-  tags:
-    - cfgov-misc
-*/
-.expandable_header-right__float-on-medium {
-  float: none;
-}
-@media only all and (min-width: 37.5em) {
-  .expandable_header-right__float-on-medium {
-    float: right;
-  }
-}
 /* topdoc
   name: Short description
   family: cfgov-misc
